Fixed issue #333 : Network Configuration BootGrid listing is not showing properly
Added overflow scroll css back which listed Network listing corretly.

--- a/ui/css/ginger.css
+++ b/ui/css/ginger.css
@@ -832,6 +832,7 @@
 
 #network-content-area .bootgrid-table tbody {
   height: 250px;
+  overflow: scroll;
   position: absolute;
   width: 100%;
 }
