--- a/ui/css/src/modules/_network.scss
+++ b/ui/css/src/modules/_network.scss
@@ -138,6 +138,7 @@
     }
     tbody {
       height: 250px;
+      overflow: scroll;
       position: absolute;
       width: 100%;
     }
